# ail

./: .gitignore  README.md  pyproject.toml
data_science/bayesian_glm/: data_generation.py  model.py
data_science/data_acquisition/: sm_datasets.py
datasets/: guerry.csv
projects/kor_covid/docs/: kor_covid.md
test/: test_sm_datasets.py
