[tool.poetry]
name = "ail"
version = "0.1.0"
description = "All I Learned"
authors = ["Chanhee Lee <qjzx6428@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10 <3.12"


[tool.poetry.group.common.dependencies]
black = "^23.1.0"


[tool.poetry.group.ds.dependencies]
numpy = "^1.24.2"
scipy = "^1.10.1"
matplotlib = "^3.7.0"
scikit-learn = "^1.2.1"
pandas = "^1.5.3"
plotly = "^5.13.0"
dash = "^2.8.1"
pytest = "^7.2.1"
jupyter = "^1.0.0"
jupyterlab = "^3.6.1"


[tool.poetry.group.ds-dev.dependencies]
dash = "^2.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
